--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           key: ${{secrets.SSH}}
           source: "./dist/*"
           target: "/home/ci/core-regulus/backend"
-      - name: Run remote SSH command
+      - name: Restart service
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.HOST }}
