--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,12 @@
 services:
-  goapp:
+  core_regulus_backend:
     build: .
     ports:
       - "5000:5000"
     restart: unless-stopped
+    networks:
+      - internal
+
+networks:
+  internal:
+    driver: bridge
