--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,5 +40,7 @@ jobs:
           port: 22
           script: |
             cd /home/ci/core-regulus/backend
+            mkdir .credentials
+            echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> .credentials/.env
             docker compose down
             docker compose up --build -d
