--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,10 @@ jobs:
           port: 22
           script: |
             cd /home/ci/core-regulus/backend
-            mkdir .credentials
-            echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> .credentials/.env
+            echo "DB_HOST=${{ secrets.DB_HOST }}" > .env
+            echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
+            echo "DB_USER=${{ secrets.DB_USER }}" >> .env
+            echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
+            echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
             docker compose down
             docker compose up --build -d
