--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,9 @@ services:
 networks:
   shared_net:
     external: true
+environment:
+  - DB_HOST
+  - DB_PORT
+  - DB_NAME
+  - DB_USER
+  - DB_PASSWORD
